--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 #root {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
@@ -74,3 +74,4 @@ body {
     transform: translateY(0); 
   }
 }
+
