--- a/app/globals.css
+++ b/app/globals.css
@@ -41,6 +41,33 @@ body {
   --animate-shimmer-slow: shimmer 3s linear infinite;
   --animate-fade-in-up-fast: fadeInUp 0.3s ease-out forwards;
   --animate-fade-in-up-slow: fadeInUp 1s ease-out forwards;
+
+  @keyframes switch { 
+    0% { left: 4px } 
+    50% { left: 4px; width: 35px } 
+    100% { left: 33px; width: 23px } 
+  }
+  @keyframes reverseSwitch { 
+    0% { left: 33px } 
+    50% { left: 15px; width: 35px } 
+    100% { left: 4px; width: 23px } 
+  }
+  @keyframes flickerNightMode {
+    0% { opacity: 1 }
+    50% { opacity: 0; transform: translateX(-7px) }
+    100% { opacity: 1; transform: translateX(-14px) }
+  }
+  @keyframes flickerDayMode {
+    0% { opacity: 1; transform: translateX(-14px) }
+    50% { opacity: 0; transform: translateX(-7px) }
+    100% { opacity: 1 }
+  }
+
+  /* animation tokens (optional but nice) */
+  --animate-switch: switch 1s ease-in-out forwards;
+  --animate-reverse-switch: reverseSwitch 1s ease-in-out forwards;
+  --animate-flicker-night-mode: flickerNightMode 1s ease-in-out forwards;
+  --animate-flicker-day-mode: flickerDayMode 1s ease-in-out forwards;
 }
 
 /* Define the keyframes */
@@ -74,4 +101,3 @@ body {
     transform: translateY(0); 
   }
 }
-
